--- a/test.html
+++ b/test.html
@@ -29,7 +29,7 @@
             <!-- Editorial Section - Serif -->
             <div class="editorial">
                 <h2>Serif</h2>
-                <p>Serifs are the small features at the end of strokes within letters. These features are <strong>functional as well as decorative</strong>. Serif fonts are widely used for body text (eg. articles) because they are considered easier to read than sans-serif fonts in print.</p>
+                <p>HELLO THERE! Serifs are the small features at the end of strokes within letters. These features are <strong>functional as well as decorative</strong>. Serif fonts are widely used for body text (eg. articles) because they are considered easier to read than sans-serif fonts in print.</p>
                 <p><em>Serif fonts can often create a feeling of traditionalism and antiquity, due to their common use in printed materials for many years.</em></p>
             </div>
             
