--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@
             <!-- Editorial Section - Sans-Serif -->
             <div class="editorial">
                 <h2>Sans-Serif</h2>
-                <p>Sans-Serif ("without serif") describes fonts with characters which lack flourishes at the ends of the strokes. Sans-serif fonts have become the most prevalent for display of text on computer screens, as on lower-resolution digital displays, fine details like serifs may disappear or appear too large.</p>
+                <p>THIS CLASS IS HARD Sans-Serif ("without serif") describes fonts with characters which lack flourishes at the ends of the strokes. Sans-serif fonts have become the most prevalent for display of text on computer screens, as on lower-resolution digital displays, fine details like serifs may disappear or appear too large.</p>
                 <p><em>Sans-serif fonts are often used to project an image of simplicity, modernity or minimalism.</em></p>
             </div>
             
